Execute integration tests separately