@@ -76,8 +76,10 @@
     <resource.delimiter>@</resource.delimiter>
     <revision>0.1.0</revision>
     <sha1/>
+    <skipITs>${skipTests}</skipITs>
     <skipNexusStagingDeployMojo>${maven.deploy.skip}</skipNexusStagingDeployMojo>
-    <!--suppress UnresolvedMavenProperty -->
+    <skipTests>false</skipTests>
+    <skipUTs>${skipTests}</skipUTs>
     <sonar.coverage.jacoco.xmlReportPaths>
       ${maven.multiModuleProjectDirectory}/markitect-liquibase-coverage/target/site/jacoco-aggregate/jacoco.xml
     </sonar.coverage.jacoco.xmlReportPaths>
@@ -539,6 +541,31 @@ $1$4]]></replacement>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-surefire.version}</version>
+          <configuration>
+            <argLine>@{argLine}
+              -Djdk.attach.allowAttachSelf=true
+              -XX:+EnableDynamicAgentLoading</argLine>
+            <excludes>
+              <exclude>**/*$*</exclude>
+            </excludes>
+            <includes>
+              <include>**/*IntegrationTests.java</include>
+            </includes>
+            <useModulePath>false</useModulePath>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>${maven-gpg-plugin.version}</version>
         </plugin>
@@ -622,6 +649,14 @@ $1$4]]></replacement>
             <argLine>@{argLine}
               -Djdk.attach.allowAttachSelf=true
               -XX:+EnableDynamicAgentLoading</argLine>
+            <excludes>
+              <exclude>**/*$*</exclude>
+              <exclude>**/*IntegrationTests.java</exclude>
+            </excludes>
+            <includes>
+              <include>**/*Tests.java</include>
+            </includes>
+            <skipTests>${skipUTs}</skipTests>
             <useModulePath>false</useModulePath>
           </configuration>
         </plugin>
@@ -824,6 +859,18 @@ $1$4]]></replacement>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${maven-surefire.version}</version>
+        <executions>
+          <execution>
+            <id>default</id>
+            <phase>none</phase>
+            <inherited>false</inherited>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
         <version>${maven-install-plugin.version}</version>
         <executions>
@@ -914,6 +961,12 @@ $1$4]]></replacement>
                   <id>prepare-agent</id>
                   <goals>
                     <goal>prepare-agent</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>prepare-agent-integration</id>
+                  <goals>
+                    <goal>prepare-agent-integration</goal>
                   </goals>
                 </execution>
               </executions>
